# ImageTransferTCP

./: README.md  Steps to complete the Tech Challenge.docx
Client/: Client.cbp  Client.depend  Client.layout
Client/inc/: socket_manager.h  tcp_client.h
Client/scr/: demo_Client.cpp  socket_manager.cpp  tcp_client.cpp
ClientImage/: ClientImage.cbp  ClientImage.cpp  ClientImage.depend  ClientImage.layout
DockerFiles/ClientImage/: Client  Dockerfile
DockerFiles/ServerImage/: Dockerfile
DockerFiles/VM_Client/ClientDocker/: ca.pem  cert.pem  config.json  id_rsa  id_rsa.pub  server-key.pem  server.pem
DockerFiles/VM_Client/ClientDocker/ClientDocker/: ClientDocker.vbox  ClientDocker.vbox-prev
DockerFiles/VM_Server/ServerDocker/: config.json  id_rsa  id_rsa.pub  key.pem  server-key.pem  server.pem
DockerFiles/VM_Server/ServerDocker/ServerDocker/: ServerDocker.vbox  ServerDocker.vbox-prev
Server/: CMakeLists.txt  Server.cbp  Server.depend  Server.layout
Server/images/: 2.jpg_original
Server/inc/: node.h  tcp_server.h  utils.h
Server/src/: demo_Server.cpp  node.cpp  tcp_server.cpp
ServerImage/: ServerImage.cbp  ServerImage.cpp  ServerImage.depend  ServerImage.layout
